Add Vitest and related dependencies to lockfile
This updates the lockfile to include Vitest and its dependencies, along with necessary packages like esbuild and rollup. These additions enable expanded testing functionality and compatibility with various environments.

Signed-off-by: suddenlyGiovanni <15946771+suddenlyGiovanni@users.noreply.github.com>

--- a/deno.json
+++ b/deno.json
@@ -1,7 +1,13 @@
 {
-  "$schema": "https://raw.githubusercontent.com/denoland/deno/refs/heads/main/cli/schemas/config-file.v1.json",
   "license": "MIT",
+  "compilerOptions": {
+	"lib": ["deno.ns"],
+	"types": [
+	  "vitest/importMeta"
+	]
+  },
   "imports": {
-    "effect": "npm:effect@^3.13.11"
+    "effect": "npm:effect@^3.13.11",
+    "vitest": "npm:vitest@^3.0.8"
   }
 }
