Update test task to use `--cached-only` with vitest
This change modifies the `test` task in `deno.json` to include the `--cached-only` flag, ensuring dependencies are loaded only from the cache. Additionally, the lockfile is updated to include the relevant vitest specifier.

Signed-off-by: suddenlyGiovanni <15946771+suddenlyGiovanni@users.noreply.github.com>

--- a/deno.json
+++ b/deno.json
@@ -10,7 +10,7 @@
   },
   "tasks": {
 	"test": {
-	  "command": "deno run -A --inspect npm:vitest@3.0.8",
+	  "command": "deno run --cached-only -A npm:vitest@^3.0.8",
 	  "description": "Run the project tests with vitest"
 	}
   },
