--- a/deno.json
+++ b/deno.json
@@ -10,7 +10,7 @@
   },
   "tasks": {
 	"test": {
-	  "command": "deno run --cached-only -A npm:vitest@^3.0.8",
+	  "command": "deno run --cached-only -A --inspect npm:vitest@^3.0.8 --no-file-parallelism",
 	  "description": "Run the project tests with vitest"
 	}
   },
