Update dependencies to latest versions: vitest, effect, rollup
Upgraded vitest to 3.0.9, effect to 3.14.1, and rollup to 4.36.0. Adjusted the lock file and `deno.json` configuration accordingly to ensure compatibility and improved dependency management.

Signed-off-by: suddenlyGiovanni <15946771+suddenlyGiovanni@users.noreply.github.com>

--- a/deno.json
+++ b/deno.json
@@ -9,14 +9,14 @@
   },
   "tasks": {
 	"test": {
-	  "command": "deno run --cached-only -A --inspect npm:vitest@^3.0.8 --no-file-parallelism",
+	  "command": "deno run --cached-only -A --inspect npm:vitest@3.0.9 --no-file-parallelism",
 	  "description": "Run the project tests with vitest"
 	}
   },
   "imports": {
-    "@deno/vite-plugin": "npm:@deno/vite-plugin@^1.0.4",
-    "effect": "npm:effect@^3.13.11",
-    "vitest": "npm:vitest@^3.0.8"
+    "@deno/vite-plugin": "npm:@deno/vite-plugin@1.0.4",
+    "effect": "npm:effect@3.14.1",
+    "vitest": "npm:vitest@3.0.9"
   },
   "lint": {
 	"rules": {
