Add @effect/vitest dependency and update parser tests
Introduce @effect/vitest as a dependency in the project and update related imports in `parser.spec.ts`. This improves compatibility and test integration using Effect and Vitest components. Adjustments made to `deno.json` and `deno.lock` ensure the library is correctly registered.

Signed-off-by: suddenlyGiovanni <15946771+suddenlyGiovanni@users.noreply.github.com>

--- a/deno.json
+++ b/deno.json
@@ -15,6 +15,7 @@
   },
   "imports": {
     "@deno/vite-plugin": "npm:@deno/vite-plugin@1.0.4",
+    "@effect/vitest": "npm:@effect/vitest@^0.20.1",
     "effect": "npm:effect@3.14.1",
     "vitest": "npm:vitest@3.0.9"
   },
